--- a/src/components/Sample.css
+++ b/src/components/Sample.css
@@ -4,27 +4,28 @@ body {
     font-family: Segoe UI, Tahoma, sans-serif;
 }
 
+
 .Example__container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 10px 0;
-    padding: 10px;
+   
 }
 
-.Example__container__load {
-    margin-top: 1em;
-    color: white;
-}
 
 .Example__container__document {
-    margin: 1em 0;
+    margin: 0;
+    padding-right: 20px;
+   
 }
 
+
 .Example__container__document .react-pdf__Page {
-    max-width: calc(100% - 2em);
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
-    margin: 1em;
+    width: 100%;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+    margin: 1rem;
+    
 }
 
 .Example__container__document .react-pdf__Page canvas {
