--- a/src/components/Sample.css
+++ b/src/components/Sample.css
@@ -1,28 +1,12 @@
-body {
-    margin: 0;
-    background-color: #fff;
-    font-family: Segoe UI, Tahoma, sans-serif;
-}
-
 
 .Example__container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px 0;
-   
 }
-
-
-.Example__container__document {
-    margin: 0;
-    padding-right: 20px;
-   
-}
-
 
 .Example__container__document .react-pdf__Page {
-    width: 100%;
+    max-width: 100%;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
     margin: 1rem;
     
@@ -33,7 +17,18 @@ body {
     height: auto !important;
 }
 
-.Example__container__document .react-pdf__message {
-    padding: 20px;
-    color: white;
+@media (max-width: 480px) {
+
+    .Example__container__document .react-pdf__Page canvas {
+            max-width: 100vw;
+            height: auto !important;
+            margin: 0;
+        }
+   
+.Example__container__document .react-pdf__Page {
+            max-width: 100%;
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+            margin-left: 0px;
+        }
+   
 }
